in middle of fixing chat styles on mobile

--- a/client/src/components/Chat/Chat.scss
+++ b/client/src/components/Chat/Chat.scss
@@ -46,8 +46,11 @@
         }
         .conversationRight {
             height: calc(100vh - 121px); 
-            display:unset; 
             width: 100%;
+            display:unset; 
+            .chatWindow {
+                width: 100%;
+            }
         }
     }
 }
